# Physical-AI---Humanoid-Robotics

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  test_embedding_format.py
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
auth-server/: package-lock.json  package.json  tsconfig.json
auth-server/src/: auth.ts  index.ts
backend/: .gitignore  check_collection.py  pyproject.toml  test_agent_responses.py  test_api_endpoints.py  test_comprehensive_rag.py  test_embedding_format.py  test_rag_verification.py
backend/backend/: database.py  ingest.py  test_qdrant.py
backend/migrations/: 003_create_chatkit_tables.sql
backend/src/backend/: CHATKIT_IMPLEMENTATION.md  MIGRATION_GUIDE.md  chatkit_adapter.py  main.py  neon_store.py  store.py
backend/src/backend/middleware/: auth.py
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/docs/: conclusion.md  intro.md  quickstart.md
specs/001-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-qdrant-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chatkit-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-text-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-auth-neon-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-auth-styling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+131 files in other folders)
